Update to latest primogenitor and dependencies.